--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,14 @@ language: go
 go:
   - 1.3
   - tip
-install: go get -d -v ./... && go build -v ./...
+install: go get -tags leveldb -d -v ./... && go build -tags leveldb -v
 script:
+  - cd /tmp && git clone https://github.com/google/leveldb.git && cd /tmp/leveldb && make
   - go get golang.org/x/tools/cmd/vet
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
   - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
-  - go test -v -bench . -cpu 1,2,4,8 ./... 
+  - go test -tags leveldb -v -bench . -cpu 1,2,4,8 ./... 
 
 notifications:
   email:
