--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ go:
   - tip
 install: 
   - cd /tmp && git clone https://github.com/google/leveldb.git && cd /tmp/leveldb && make
+  - cd $HOME/gopath/src/github.com/NeowayLabs/neosearch
   - go get -d -v ./...
   - go build -tags leveldb -v
 script:
