--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
   - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
-  - go test -tags leveldb -v -bench . -cpu 1,2,4,8 ./... 
+  - go test -tags leveldb -v ./... 
 
 notifications:
   email:
