[CHANGE] update server Dockerfile

--- a/neosearch/Dockerfile
+++ b/neosearch/Dockerfile
@@ -1,11 +1,13 @@
-from scratch
+from neowaylabs/neosearch-dev-env:latest
 
 MAINTAINER Tiago Natel de Moura <tiago.natel@neoway.com.br> (@tiago4orion)
 
-ADD ./neosearch /neosearch
+WORKDIR /go/src/github.com/NeowayLabs/neosearch
+
+RUN hack/make.sh server
 
 VOLUME ["/data"]
 
 EXPOSE 9500
 
-CMD ["/neosearch", "-d", "/data"]
+CMD ["./bundles/0.1.0/server/neosearch", "-d", "/data"]
