[BUGFIX] add missing deps to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ script:
   - go get golang.org/x/tools/cmd/vet
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
+  - go get -u github.com/golang/lint/golint
+  - go get github.com/nielsdraaisma/godep
   - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
   - hack/check.sh
 
