--- a/neosearch/Dockerfile
+++ b/neosearch/Dockerfile
@@ -2,6 +2,9 @@ from neowaylabs/neosearch-dev-env:latest
 
 MAINTAINER Tiago Natel de Moura <tiago.natel@neoway.com.br> (@tiago4orion)
 
+RUN cd /tmp && git clone https://github.com/NeowayLabs/neosearch.git && \
+    cp -R /tmp/neosearch/* /go/src/github.com/NeowayLabs/neosearch/
+
 WORKDIR /go/src/github.com/NeowayLabs/neosearch
 
 RUN hack/make.sh server
