--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ script:
   - go get github.com/nielsdraaisma/godep
   - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
   - hack/check.sh
+  - goveralls -coverprofile=profile.cov -service=travis-ci
 
 notifications:
   email:
