--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,11 @@ script:
   - go get github.com/nielsdraaisma/godep
   - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
   - hack/check.sh
-  - goveralls -coverprofile=profile.cov -service=travis-ci
-
+  - goveralls -coverprofile=coverage.txt -service=travis-ci
+before_install:
+  pip install codecov
+after_success:
+  codecov
 notifications:
   email:
     - tiago.natel@neoway.com.br
