--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ language: go
 go:
   - 1.3
   - tip
-install: 
+install:
   - cd /tmp && git clone https://github.com/google/leveldb.git && cd /tmp/leveldb && make
   - cd $HOME/gopath/src/github.com/NeowayLabs/neosearch
   - go get -v github.com/jmhodges/levigo
-  - go get -d -v ./...
+  - go get -tags leveldb -d -v ./...
   - go build -tags leveldb -v ./...
 script:
   - go get golang.org/x/tools/cmd/vet
@@ -26,6 +26,7 @@ notifications:
   email:
     - tiago.natel@neoway.com.br
     - tiagokatcipis@gmail.com
+    - paulo.pizarro@gmail.com
   webhooks:
     urls:
       - "https://webhooks.gitter.im/e/5c49f66645e9c101199e"
