--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,9 @@ go:
   - 1.3
   - tip
 install:
-  - cd /tmp && git clone https://github.com/google/leveldb.git && cd /tmp/leveldb && make
   - cd $HOME/gopath/src/github.com/NeowayLabs/neosearch
-  - go get -v github.com/jmhodges/levigo
-  - go get -tags leveldb -d -v ./...
-  - go build -tags leveldb -v ./...
+  - go get -d -v ./...
+  - go build -v ./...
 script:
   - go get golang.org/x/tools/cmd/vet
   - go get github.com/axw/gocov/gocov
