--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
   - go get golang.org/x/tools/cmd/vet
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
-  - go get -u github.com/golang/lint/golint
+  - go get -u github.com/golang/lint
   - go get github.com/tools/godep
   - go get golang.org/x/tools/cover
   - hack/check.sh
